# kurs1

./: .env_template  .flake8  README.md  main.py  pyproject.toml
src/: external_api.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_reports.py  test_services.py  test_utils.py  test_views.py
